[gd_scene load_steps=4 format=2]

[ext_resource path="res://Common/UI/Fonts/UIBodyLarge.tres" type="DynamicFont" id=1]
[ext_resource path="res://Common/UI/Fonts/TitleFont.tres" type="DynamicFont" id=2]
[ext_resource path="res://Common/UI/GameOverUI/GameOverUI.gd" type="Script" id=3]

[node name="GameOverUI" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
score_label = NodePath("VBoxContainer/Score")
main_menu_scene = "res://Common/UI/MainMenu/MainMenu.tscn"

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0, 0, 0, 0.87451 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 60
alignment = 1

[node name="Title" type="Label" parent="VBoxContainer"]
margin_top = 364.0
margin_right = 1920.0
margin_bottom = 476.0
custom_fonts/font = ExtResource( 2 )
text = "Game Over!"
align = 1
valign = 1

[node name="Score" type="Label" parent="VBoxContainer"]
margin_top = 536.0
margin_right = 1920.0
margin_bottom = 593.0
custom_fonts/font = ExtResource( 1 )
text = "Score: 0000"
align = 1
valign = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 653.0
margin_right = 1920.0
margin_bottom = 716.0
custom_constants/separation = 60
alignment = 1

[node name="PlayAgain" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 762.0
margin_right = 875.0
margin_bottom = 63.0
custom_fonts/font = ExtResource( 1 )
text = "Retry"

[node name="MainMenu" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 935.0
margin_right = 1157.0
margin_bottom = 63.0
custom_fonts/font = ExtResource( 1 )
text = "Main Menu"

[connection signal="button_up" from="VBoxContainer/HBoxContainer/PlayAgain" to="." method="_on_PlayAgain_button_up"]
[connection signal="button_up" from="VBoxContainer/HBoxContainer/MainMenu" to="." method="_on_MainMenu_button_up"]
